OK-604: Vaihdettu käyttämään Spring -jdbc templatea. Korjattu testissä löytyneet virheet